--- a/package.json
+++ b/package.json
@@ -9,7 +9,6 @@
     "studio": "npx prisma studio",
     "db:generate": "npx prisma generate",
     "db:seed": "npx prisma db seed"
-
   },
   "dependencies": {
     "@prisma/client": "^5.18.0",
@@ -30,6 +29,7 @@
     "eslint-plugin-prettier": "^5.1.3",
     "globals": "^15.4.0",
     "prettier": "^3.3.2",
+    "prettier-plugin-prisma": "^5.0.0",
     "ts-node-dev": "^2.0.0",
     "typescript": "^5.4.5",
     "typescript-eslint": "^7.13.0"
