--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
     "express": "^4.19.2",
+    "joi": "^17.13.3",
     "prisma": "^5.18.0",
     "uuid": "^10.0.0"
   },
