--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "dev": "ts-node-dev --inspect --transpile-only --ignore-watch node_modules --respawn src/server.ts",
     "db:migrate": "prisma migrate deploy && npm run db:generate",
+    "migrate": "npx prisma migrate dev",
     "studio": "npx prisma studio",
     "db:generate": "npx prisma generate",
     "db:seed": "npx prisma db seed"
@@ -13,6 +14,7 @@
   "dependencies": {
     "@prisma/client": "^5.18.0",
     "bcryptjs": "^2.4.3",
+    "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "prisma": "^5.18.0",
