--- a/package.json
+++ b/package.json
@@ -17,6 +17,7 @@
     "cors": "^2.8.5",
     "express": "^4.19.2",
     "joi": "^17.13.3",
+    "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "uuid": "^10.0.0"
   },
