--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "express": "^4.19.2",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.14",
     "prisma": "^5.18.0",
     "uuid": "^10.0.0"
